# AgamP4_conservation_score

./: .gitignore  LICENCE  README.md  _data_process.py  _fill_zarr_storage_pbs.py  fetch_score.py  pyproject.toml  requirements.txt
agam_conservation/: cs.py
data/alignment_depth/: X.depth.tsv
notebooks/: access_cs.ipynb
pipeline/: _run_CNEr.R
