[tool.poetry]
name = "agam_conservation"
version = "0.2.0"
description = ""
authors = ["Nace Kranjc <nkranjc@ic.ac.uk>"]
license = "MIT"
packages = [
    { include = 'data' }
]
include = ["data/*.gff3"]

[tool.poetry.dependencies]
python = "^3.7"
h5py = "*"
numpy = "*"
pandas = "*"
requests = "*"
scikit-allel = "*"
seaborn = "*"
humanize = "*"

[tool.poetry.dev-dependencies]
notebook = "^6.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
